--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "material-dashboard-angular",
-  "version": "2.5.0",
-  "license": "MIT",
+  "name": "str-angular-project-big",
+  "version": "0.0.10",
   "scripts": {
     "ng": "ng",
     "start": "ng serve -o",
