--- a/angular.json
+++ b/angular.json
@@ -35,13 +35,28 @@
             ],
             "styles": [
               "src/assets/css/google-fonts-icons.css",
+              "node_modules/perfect-scrollbar/css/perfect-scrollbar.css",
               "node_modules/font-awesome/css/font-awesome.min.css",
               "src/assets/css/material-dashboard.min.css",
               "node_modules/ngx-toastr/toastr.css",
               "src/styles.scss"
             ],
-            "scripts": []
-          },
+"scripts": [
+              "node_modules/jquery/dist/jquery.js",
+              "node_modules/popper.js/dist/umd/popper.js",
+              "node_modules/bootstrap-material-design/dist/js/bootstrap-material-design.min.js",
+              "node_modules/arrive/src/arrive.js",
+              "node_modules/moment/moment.js",
+              "node_modules/perfect-scrollbar/dist/perfect-scrollbar.min.js",
+              "node_modules/bootstrap-notify/bootstrap-notify.js",
+              "node_modules/chartist/dist/chartist.js"
+            ],
+            "allowedCommonJsDependencies" : [
+              "rxjs/add/operator/filter",
+              "jquery",
+              "chartist"
+            ]
+         },
           "configurations": {
             "production": {
               "fileReplacements": [
