--- a/package.json
+++ b/package.json
@@ -19,8 +19,16 @@
     "@angular/platform-browser": "~11.1.1",
     "@angular/platform-browser-dynamic": "~11.1.1",
     "@angular/router": "~11.1.1",
+    "arrive": "^2.4.1",
+    "bootstrap-material-design": "^4.1.3",
+    "bootstrap-notify": "^3.1.3",
+    "chartist": "^0.11.4",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.5.1",
+    "moment": "^2.29.1",
     "ngx-toastr": "^13.2.0",
+    "perfect-scrollbar": "^1.5.0",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
