--- a/angular.json
+++ b/angular.json
@@ -24,6 +24,7 @@
               "node_modules/perfect-scrollbar/css/perfect-scrollbar.css",
               "src/assets/scss/material-dashboard.scss",
               "node_modules/ngx-toastr/toastr.css",
+              "node_modules/chartist/dist/chartist.min.css",
               "src/assets/css/demo.css"
             ],
             "scripts": [
@@ -34,7 +35,7 @@
               "node_modules/moment/moment.js",
               "node_modules/perfect-scrollbar/dist/perfect-scrollbar.min.js",
               "node_modules/bootstrap-notify/bootstrap-notify.js",
-              "node_modules/chartist/dist/chartist.js"
+              "node_modules/chartist/dist/chartist.min.js"
             ],
             "allowedCommonJsDependencies": [
               "rxjs/add/operator/filter",
