--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "bootstrap": "4.5.2",
     "bootstrap-material-design": "4.1.3",
     "bootstrap-notify": "3.1.3",
-    "chartist": "0.11.4",
+    "chartist": "^0.11.4",
     "classlist.js": "1.1.20150312",
     "core-js": "3.6.5",
     "eslint": "^7.10.0",
@@ -41,6 +41,7 @@
     "hammerjs": "2.0.8",
     "jquery": "3.5.1",
     "moment": "2.29.1",
+    "ng-chartist": "^4.1.0",
     "ngx-toastr": "^13.2.0",
     "perfect-scrollbar": "1.5.0",
     "popper.js": "1.16.1",
@@ -55,7 +56,7 @@
     "@angular/compiler-cli": "11.2.1",
     "@angular/language-service": "11.2.1",
     "@types/bootstrap": "4.5.0",
-    "@types/chartist": "0.11.0",
+    "@types/chartist": "^0.11.0",
     "@types/jasmine": "3.5.14",
     "@types/jquery": "3.5.2",
     "@types/node": "14.11.5",
