--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "bootstrap": "4.5.2",
     "bootstrap-material-design": "4.1.3",
     "bootstrap-notify": "3.1.3",
+    "chart.js": "^2.9.4",
     "chartist": "^0.11.4",
     "classlist.js": "1.1.20150312",
     "core-js": "3.6.5",
@@ -42,6 +43,7 @@
     "jquery": "3.5.1",
     "moment": "2.29.1",
     "ng-chartist": "^4.1.0",
+    "ng2-charts": "^2.4.2",
     "ngx-toastr": "^13.2.0",
     "perfect-scrollbar": "1.5.0",
     "popper.js": "1.16.1",
@@ -69,6 +71,7 @@
     "karma-coverage-istanbul-reporter": "3.0.3",
     "karma-jasmine": "4.0.1",
     "karma-jasmine-html-reporter": "1.5.4",
+    "ng2-charts-schematics": "^0.1.7",
     "protractor": "7.0.0",
     "ts-node": "9.0.0",
     "tslint": "6.1.3",
