--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@angular/compiler": "~11.1.1",
     "@angular/core": "~11.1.1",
     "@angular/forms": "~11.1.1",
+    "@angular/localize": "~11.1.1",
     "@angular/platform-browser": "~11.1.1",
     "@angular/platform-browser-dynamic": "~11.1.1",
     "@angular/router": "~11.1.1",
+    "@ng-bootstrap/ng-bootstrap": "^9.0.0",
     "arrive": "^2.4.1",
+    "bootstrap": "^4.5.0",
     "bootstrap-material-design": "^4.1.3",
     "bootstrap-notify": "^3.1.3",
     "chartist": "^0.11.4",
