--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "@angular/compiler": "11.2.1",
     "@angular/core": "11.2.1",
     "@angular/forms": "11.2.1",
+    "@angular/localize": "11.2.1",
     "@angular/material": "10.2.4",
     "@angular/platform-browser": "11.2.1",
     "@angular/platform-browser-dynamic": "11.2.1",
     "@angular/platform-server": "11.2.1",
     "@angular/router": "11.2.1",
+    "@ng-bootstrap/ng-bootstrap": "^9.0.2",
     "ajv": "6.12.5",
     "arrive": "2.4.1",
     "bootstrap": "4.5.2",
