--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "moment": "^2.29.1",
+    "ng2-google-charts": "^6.1.0",
     "ngx-toastr": "^13.2.0",
     "perfect-scrollbar": "^1.5.0",
     "popper.js": "^1.16.1",
