--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/compiler": "11.2.1",
     "@angular/core": "11.2.1",
     "@angular/forms": "11.2.1",
+    "@angular/google-maps": "^11.2.2",
     "@angular/localize": "11.2.1",
     "@angular/material": "10.2.4",
     "@angular/platform-browser": "11.2.1",
