--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jquery": "^3.5.1",
     "moment": "^2.29.1",
     "ng2-charts": "^2.4.2",
+    "ngx-toastr": "^13.2.0",
     "perfect-scrollbar": "^1.5.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
