--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "moment": "^2.29.1",
+    "ng-animate-scroll": "^7.1.0",
     "ng2-charts": "^2.4.2",
     "ngx-toastr": "^13.2.0",
     "perfect-scrollbar": "^1.5.0",
