--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "moment": "^2.29.1",
     "ng-animate-scroll": "^7.1.0",
     "ng2-charts": "^2.4.2",
+    "ngx-spinner": "^10.0.1",
     "ngx-toastr": "^13.2.0",
     "perfect-scrollbar": "^1.5.0",
     "popper.js": "^1.16.1",
